# gpt-oss

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  USAGE_POLICY  awesome-gpt-oss.md  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: CI.yml
_build/gpt_oss_build_backend/: __init__.py  backend.py
claude_doc/: 00_项目总览.md  01_torch_model.md  02_triton_model.md  03_chat.md  04_tokenizer.md  05_torch_weights.md  06_responses_api_server.md  07_tools_tool.md  08_triton_moe.md  09_metal_model.md  10_generate.md
claude_doc/html/: 00_项目总览.html  01_torch_model.html  02_triton_model.html  03_chat.html  04_tokenizer.html  05_torch_weights.html  06_responses_api_server.html  07_tools_tool.html  08_triton_moe.html  09_metal_model.html  10_generate.html
claude_doc/html/cache/: conversion_cache.json
examples/agents-sdk-js/: index.ts  package-lock.json  package.json
examples/agents-sdk-python/: example.py  pyproject.toml
examples/streamlit/: streamlit_chat.py
gpt-oss-mcp-server/: README.md  browser_server.py  build-system-prompt.py  pyproject.toml  python_server.py  reference-system-prompt.py
gpt_oss/: chat.py  generate.py  tokenizer.py
gpt_oss/evals/: README.md  __main__.py  abcd_grader.py  aime_eval.py  basic_eval.py  chat_completion_sampler.py  chat_completions_sampler.py  gpqa_eval.py  healthbench_eval.py  report.py  responses_sampler.py
gpt_oss/metal/: CMakeLists.txt  __init__.py
gpt_oss/metal/benchmark/: f32-bf16w-rmsnorm.cc  f32-random.cc  mf4-f32-convert.cc  u32-random.cc
gpt_oss/metal/examples/: chat.py  generate.py
gpt_oss/metal/include/: gpt-oss.h
gpt_oss/metal/include/gpt-oss/: functions.h  macros.h  types.h
gpt_oss/metal/python/: context.c  model.c  module.c  module.h  tokenizer.c
gpt_oss/metal/scripts/: create-local-model.py
gpt_oss/metal/source/: accumulate.metal  context.c  convert.metal  embeddings.metal  generate.c  log.c  matmul.metal  metal-kernels.c  metal.m  model.c  moematmul.metal  random.metal  rmsnorm.metal  rope.metal  sample.metal  sdpa.metal  tokenizer.c  topk.metal
gpt_oss/metal/source/include/internal/: datatype.h  datatype.hpp  kernel-args.h  log.h  macros.h  math.h  metal-kernels.h  metal.h  metal.hpp  model.h  rng.h  rng.hpp  storage.h  uuid.h
gpt_oss/metal/test/: bf16-f32-embeddings.cc  embeddings-kernel-tester.hpp  f32-bf16w-matmul.cc  f32-bf16w-rmsnorm.cc  f32-random.cc  f32-rope.cc  fill-random-kernel-tester.hpp  matmul-kernel-tester.hpp  mf4-f32-convert.cc  rmsnorm-kernel-tester.hpp  rope-kernel-tester.hpp  u32-random.cc
gpt_oss/responses_api/: api_server.py  events.py  serve.py  types.py  utils.py
gpt_oss/responses_api/inference/: metal.py  ollama.py  stub.py  transformers.py  triton.py  vllm.py
gpt_oss/tools/: apply_patch.md  apply_patch.py  tool.py
gpt_oss/tools/python_docker/: docker_tool.py
gpt_oss/tools/simple_browser/: __init__.py  backend.py  page_contents.py  simple_browser_tool.py
gpt_oss/torch/: model.py  utils.py  weights.py
gpt_oss/triton/: attention.py  model.py  moe.py
gpt_oss/vllm/: token_generator.py
tests/: conftest.py  test_api_endpoints.py  test_responses_api.py
tests-data/: basic-event-stream.txt  web-search-event-stream.txt
